# image-similarity-1

./: Pipfile  pyproject.toml
image_similarity/: train.py
image_similarity/data/: __init__.py  dataset.py  fashionmnist.py  mnist.py
image_similarity/models/: __init__.py  model.py  simple.py
image_similarity/utils/: __init__.py  get_best.py  visualize.py
notebooks/: Triplet NN Test on MNIST.Rmd  image_similarity  playground.Rmd
